namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-education-employment-api-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-education-employment-api-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-education"
    cloud-platform.justice.gov.uk/slack-alert-channel: "education-skills-work-employment-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Education and Employment API"
    cloud-platform.justice.gov.uk/owner: "HMPPS ESWE Team : education-skills-work-employment-dev"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-education-employment-api.git"
    cloud-platform.justice.gov.uk/team-name: "education-skills-work-employment"
